# CD_NL2SQL

./: .gitignore  .pre-commit-config.yaml  README.md  load_data.ipynb  pyproject.toml  requirements.txt
scripts/: generate_outputs.py  submit_vllm.sbatch  train.sbatch
training/: __init__.py  train.py
utils/: __init__.py  data.py  enums.py  file_utils.py  models.py  paths.py  prompts.py
