[project]
requires-python = ">=3.14"
version = "0.0.1"
name = "CD_NL2SQL"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "anyio==4.12.1",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.4.0",
    "asttokens==3.0.1",
    "async-lru==2.2.0",
    "attrs==25.4.0",
    "babel==2.18.0",
    "beautifulsoup4==4.14.3",
    "bleach==6.3.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "comm==0.2.3",
    "datasets>=3.3.0",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dill>=0.3.9",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "filelock==3.24.3",
    "fqdn==1.5.1",
    "frozenlist==1.8.0",
    "fsspec==2024.6.1",
    "h11==0.16.0",
    "hf-xet==1.3.2",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.5.0",
    "idna==3.11",
    "ipykernel==7.2.0",
    "ipython==9.10.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.8",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "json5==0.13.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter==1.1.1",
    "jupyter-client==8.8.0",
    "jupyter-console==6.6.3",
    "jupyter-core==5.9.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.4",
    "jupyterlab==4.5.5",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.28.0",
    "jupyterlab-widgets==3.0.16",
    "lark==1.3.1",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mistune==3.2.0",
    "multidict==6.7.1",
    "multiprocess==0.70.16",
    "nbclient==0.10.4",
    "nbconvert==7.17.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "notebook==7.5.4",
    "notebook-shim==0.2.4",
    "numpy==2.4.2",
    "openai>=2.24.0",
    "packaging==26.0",
    "pandas==3.0.1",
    "pandocfilters==1.5.1",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "platformdirs==4.9.2",
    "prometheus-client==0.24.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==23.0.1",
    "pycparser==3.0",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==4.0.0",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rich==14.3.3",
    "rpds-py==0.30.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "send2trash==2.1.0",
    "setuptools==82.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "soupsieve==2.8.3",
    "stack-data==0.6.3",
    "terminado==0.18.1",
    "threadpoolctl==3.6.0",
    "tinycss2==1.4.0",
    "tornado==6.5.4",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "uri-template==1.3.0",
    "urllib3==2.6.3",
    "wcwidth==0.6.0",
    "webcolors==25.10.0",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "widgetsnbextension==4.0.15",
    "xxhash==3.6.0",
    "yarl==1.22.0",
]

[tool.setuptools]
packages = ['']

[tool.codespell]
ignore-regex = "\\[nt]" # Do not count escaped newlines or tabs as part of a word
# `astroid` is a dependency of pylint
# `ans` is a column name in the stakeholder response rating data
# `Nd` and `te` are false positives from encoded files in Jupyter notebooks
ignore-words-list = "astroid,ans,Nd,te"
quiet-level = 0 # Display all warnings
check-filenames = ""
check-hidden = ""

[tool.ruff]
fix = true
line-length = 100
# Show full violation messages by setting `RUFF_OUTPUT_FORMAT=full` in environment
output-format = "concise"
show-fixes = true

[tool.ruff.lint]
select = [
  "A", # flake8-builtins
  "ASYNC", # flake8-async
  "B", # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4", # flake8-comprehensions
  "D", # pydocstyle
  "DTZ", # flake8-datetimez
  "E", # pycodestyle error
  "F", # pyflakes
  "FBT", # flake8-boolean-trap
  "FLY", # flynt
  "FURB", # refurb
  "G", # flake8-logging-format
  "I", # isort
  "ICN", # flake8-import-conventions
  "INP", # flake8-no-pep420
  "INT", # flake8-gettext
  "ISC", # flake8-implicit-str-concat
  "LOG", # flake8-logging
  "N", # pep8-naming
  "NPY", # NumPy-specific rules
  "PIE", # flake8-pie
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  "RSE", # flake8-raise
  "RUF", # Ruff-specific rules
  "S", # flake8-bandit
  "SIM", # flake8-simplify
  "SLF", # flake8-self
  "SLOT", # flake8-slots
  "T10", # flake8-debugger
  "TID", # flake8-tidy-imports
  "UP", # pyupgrade
  "W", # pycodestyle warning
  "YTT", # flake8-2020
]
ignore = [
  # Do not prohibit f-strings in logging messages
  # The documentation describes two motivations, but I (@aphedges) disagree with both:
  # - Using f-strings means that string formatting is carried out eagerly, but
  #   f-string formatting takes such a short time that optimizing it away isn't worth it.
  # - Passing in arguments means that they can be used by other logging handlers
  #   (e.g., structured logging), but our logging is *significantly* simpler than that.
  # In addition, I personally was avoiding using f-strings for logging because of documented
  # security concerns, but at the time of writing, I was unable to find an exploit that would
  # actually affect us. Finally, the native formatting used by the `logging` module is ancient,
  # so it cannot express some formats that f-strings can. In all, I believe that enforcing the use
  # of the `logging` module's default formatter is not worth the inconveniences it causes.
  "G004", # logging-f-string (from flake8-logging-format)
  # Do not switch to `Path.open()` because `open()` is easier to test with
  # e.g., `open(data_dir / "file_a.txt")` -> `open("test/file_b.txt")`
  "PTH123", # builtin-open (from flake8-use-pathlib)
  # Keep `assert` statements because they are often used to express typing constraints for `mypy`
  # In addition, most people do not run Python with optimized bytecode
  "S101", # assert (from flake8-bandit)
  # Most code we work with is not cryptographically sensitive,
  # so the `random` module is safe to use
  "S311", # suspicious-non-cryptographic-random-usage (from flake8-bandit)
  # Allow parsing XML from untrusted sources
  # The Python documentation (https://docs.python.org/3.13/library/xml.html#xml-vulnerabilities)
  # states that the vulnerabilities are denial-of-service attacks, which are not much of a concern
  # to us. In addition, the vulnerabilities are in Expat itself, so these vulnerabilities have been
  # patched when using recent versions of the library.
  "S314", # suspicious-xml-element-tree-usage (from flake8-bandit)
  # We don't work in super security constrained environments and its normally
  # developer input we are passing to subprocess so we can avoid this check
  "S603", #`subprocess` call: check for execution of untrusted input (from flake8-bandit)
  # Ternary expressions are often less readable than `if`-`else` blocks,
  # so they should not be required
  "SIM108", # if-else-block-instead-of-if-exp (from flake8-simplify)
]

exclude = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.pycodestyle]
# Detect extra-long lines that Black can't handle
max-line-length = 250

[tool.ruff.lint.pydocstyle]
convention = "google"
